chapel-lang.org/docs/1.31/_sources/modules/standard/AutoMath.rst.txt
.. default-domain:: chpl

.. module:: AutoMath
   :synopsis: This module provides mathematical constants and functions.

AutoMath
========
.. note::

   All Chapel programs automatically ``use`` this module by default.
   An explicit ``use`` statement is not necessary.


This module provides mathematical constants and functions.

It includes wrappers for many of the constants and functions in
the C Math library, which is part of the C Language Standard (ISO/IEC 9899)
as described in Section 7.12.  Please consult that standard for an
authoritative description of the expected properties of those constants and
routines.

In general, where the C math library provides a *double* and a *float* version
of a function, the float version has a suffix 'f'.  In the Chapel interface,
the suffix is dropped, and the type of the operand determines which version is
called -- according to the usual function overloading and resolution rules.
Normally, the result has the same precision
as the argument(s).  Please consult the C standard for specifics.

Rounding -- The rounding mode for floating-point addition (subtraction) is
implementation-defined.

Error Handling -- At present, Chapel does not provide control over error
handling in the AutoMath module.  The default behavior is as if the macro
``math_errhandling`` is set to 0: Given erroneous input at run-time,
all math functions will return an implementation-defined value; no
exception will be generated.

.. _automath-roots:

Roots
-----
:proc:`cbrt`
:proc:`sqrt`

.. _automath-rounding:

Rounding
--------
:proc:`ceil`
:proc:`divceil`
:proc:`divceilpos`
:proc:`divfloor`
:proc:`divfloorpos`
:proc:`floor`
:proc:`nearbyint`
:proc:`rint`
:proc:`round`
:proc:`trunc`

.. _automath-complex:

Computations Involving Complex Numbers
--------------------------------------
:proc:`carg`
:proc:`conjg`
:proc:`cproj`

.. _automath-inf-nan:

Infinity and NaN
----------------
:var:`INFINITY`
:var:`NAN`
:proc:`isfinite`
:proc:`isinf`
:proc:`isnan`

.. _automath-comparison:

Comparison Functions
--------------------
:proc:`max`
:proc:`min`
:proc:`isclose`

.. _automath-sign:

Sign Functions
--------------
:proc:`sgn`
:proc:`signbit`

.. _automath-other:

Remaining Functions
-------------------
:proc:`abs`
:proc:`mod`

Constant and Function Definitions
---------------------------------


.. function:: proc abs(i: int(?w))

   Returns the absolute value of the integer argument.
   
   :rtype: The type of `i`.
   

.. function:: proc abs(i: uint(?w))

   Returns the absolute value of the unsigned integer argument.
   
   :rtype: The type of `i`.
   

.. function:: proc abs(param i: integral) param

   Returns the absolute value of the integer param argument `i`. 

.. function:: proc abs(r: real(64)): real(64)

   Returns the magnitude of the real argument `r`. 

.. function:: proc abs(x: real(32)): real(32)

   Returns the magnitude of the real argument `x`. 

.. function:: proc abs(im: imag(64)): real(64)

   Returns the real magnitude of the imaginary argument `im`. 

.. function:: proc abs(im: imag(32)): real(32)

   Returns the real magnitude of the imaginary argument `im`. 

.. function:: proc abs(z: complex(?w)): real(w/2)

   Returns the magnitude (often called modulus) of complex `z`.
   
   In concert with the related :proc:`carg`, the phase (a.k.a. argument)
   of `z`, it can be used to recompute `z`.
   
   :rtype: ``real(w/2)`` when `z` has a type of ``complex(w)``.
   

.. function:: proc carg(z: complex(?w)): real(w/2)

   Returns the phase (often called `argument`) of complex `z`, an angle (in
   radians).
   
   In concert with the related :proc:`abs`, the magnitude (a.k.a.
   modulus) of `z`, it can be used to recompute `z`.
   
   :rtype: ``real(w/2)`` when `z` has a type of ``complex(w)``.
   

.. function:: proc acos(x: real(64)): real(64)

   Returns the arc cosine of the argument `x`.
   
   It is an error if `x` is less than -1 or greater than 1.
   

   .. warning::

      In an upcoming release 'acos' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc acos(x: real(32)): real(32)

   Returns the arc cosine of the argument `x`.
   
   It is an error if `x` is less than -1 or greater than 1.
   

   .. warning::

      In an upcoming release 'acos' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc acos(z: complex(64)): complex(64)

   Returns the arc cosine of the argument `z`. 

   .. warning::

      In an upcoming release 'acos' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc acos(z: complex(128)): complex(128)

   Returns the arc cosine of the argument `z`. 

   .. warning::

      In an upcoming release 'acos' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc acosh(x: real(64)): real(64)

   Returns the inverse hyperbolic cosine of the argument `x`.
   
   It is an error if `x` is less than 1.
   

   .. warning::

      In an upcoming release 'acosh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc acosh(x: real(32)): real(32)

   Returns the inverse hyperbolic cosine of the argument `x`.
   
   It is an error if `x` is less than 1.
   

   .. warning::

      In an upcoming release 'acosh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc acosh(z: complex(64)): complex(64)

   Returns the inverse hyperbolic cosine of the argument `z`. 

   .. warning::

      In an upcoming release 'acosh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc acosh(z: complex(128)): complex(128)

   Returns the inverse hyperbolic cosine of the argument `z`. 

   .. warning::

      In an upcoming release 'acosh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc asin(x: real(64)): real(64)

   Returns the arc sine of the argument `x`.
   
   It is an error if `x` is less than -1 or greater than 1.
   

   .. warning::

      In an upcoming release 'asin' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc asin(x: real(32)): real(32)

   Returns the arc sine of the argument `x`.
   
   It is an error if `x` is less than -1 or greater than 1.
   

   .. warning::

      In an upcoming release 'asin' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc asin(z: complex(64)): complex(64)

   Returns the arc sine of the argument `z`. 

   .. warning::

      In an upcoming release 'asin' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc asin(z: complex(128)): complex(128)

   Returns the arc sine of the argument `z`. 

   .. warning::

      In an upcoming release 'asin' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc asinh(x: real(64)): real(64)

   Returns the inverse hyperbolic sine of the argument `x`. 

   .. warning::

      In an upcoming release 'asinh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc asinh(x: real(32)): real(32)

   Returns the inverse hyperbolic sine of the argument `x`. 

   .. warning::

      In an upcoming release 'asinh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc asinh(z: complex(64)): complex(64)

   Returns the inverse hyperbolic sine of the argument `z`. 

   .. warning::

      In an upcoming release 'asinh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc asinh(z: complex(128)): complex(128)

   Returns the inverse hyperbolic sine of the argument `z`. 

   .. warning::

      In an upcoming release 'asinh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc atan(x: real(64)): real(64)

   Returns the arc tangent of the argument `x`. 

   .. warning::

      In an upcoming release 'atan' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc atan(x: real(32)): real(32)

   Returns the arc tangent of the argument `x`. 

   .. warning::

      In an upcoming release 'atan' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc atan(z: complex(64)): complex(64)

   Returns the arc tangent of the argument `z`. 

   .. warning::

      In an upcoming release 'atan' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc atan(z: complex(128)): complex(128)

   Returns the arc tangent of the argument `z`. 

   .. warning::

      In an upcoming release 'atan' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc atan2(y: real(64), x: real(64)): real(64)

   Returns the arc tangent of the ratio of the two arguments.
   
   This is equivalent to
   the arc tangent of `y` / `x` except that the signs of `y`
   and `x` are used to determine the quadrant of the result. 

   .. warning::

      In an upcoming release 'atan2' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc atan2(y: real(32), x: real(32)): real(32)

   Returns the arc tangent of the two arguments.
   
   This is equivalent to
   the arc tangent of `y` / `x` except that the signs of `y`
   and `x` are used to determine the quadrant of the result. 

   .. warning::

      In an upcoming release 'atan2' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc atanh(x: real(64)): real(64)

   Returns the inverse hyperbolic tangent of the argument `x`.
   
   It is an error if `x` is less than -1 or greater than 1. 

   .. warning::

      In an upcoming release 'atanh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc atanh(x: real(32)): real(32)

   Returns the inverse hyperbolic tangent of the argument `x`.
   
   It is an error if `x` is less than -1 or greater than 1. 

   .. warning::

      In an upcoming release 'atanh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc atanh(z: complex(64)): complex(64)

   Returns the inverse hyperbolic tangent of the argument `z`. 

   .. warning::

      In an upcoming release 'atanh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc atanh(z: complex(128)): complex(128)

   Returns the inverse hyperbolic tangent of the argument `z`. 

   .. warning::

      In an upcoming release 'atanh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc cbrt(x: real(64)): real(64)

   Returns the cube root of the argument `x`. 

.. function:: proc cbrt(x: real(32)): real(32)

   Returns the cube root of the argument `x`. 

.. function:: proc ceil(x: real(64)): real(64)

   Returns the value of the argument `x` rounded up to the nearest integer. 

.. function:: proc ceil(x: real(32)): real(32)

   Returns the value of the argument `x` rounded up to the nearest integer. 

.. function:: proc conjg(z: complex(?w))

   Returns the complex conjugate of the complex argument `z`.
   
   :rtype: A complex number of the same type as `z`.
   

.. function:: proc conjg(z: imag(?w))

   Returns the complex conjugate of the imaginary argument `z`.
   
   :rtype: An imaginary number of the same type as `z`.
   

.. function:: proc conjg(z: int(?w))

   Returns the argument `z`.
   
   :rtype: A number that is not complex or imaginary of the same type as `z`.
   

.. function:: proc conjg(z: uint(?w))

.. function:: proc conjg(z: real(?w))

.. function:: proc cproj(z: complex(?w)): complex(w)

   Returns the projection of `z` on a Riemann sphere. 

.. function:: proc cos(x: real(64)): real(64)

   Returns the cosine of the argument `x`. 

   .. warning::

      In an upcoming release 'cos' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc cos(x: real(32)): real(32)

   Returns the cosine of the argument `x`. 

   .. warning::

      In an upcoming release 'cos' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc cos(z: complex(64)): complex(64)

   Returns the cosine of the argument `z`. 

   .. warning::

      In an upcoming release 'cos' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc cos(z: complex(128)): complex(128)

   Returns the cosine of the argument `z`. 

   .. warning::

      In an upcoming release 'cos' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc cosh(x: real(64)): real(64)

   Returns the hyperbolic cosine of the argument `x`. 

   .. warning::

      In an upcoming release 'cosh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc cosh(x: real(32)): real(32)

   Returns the hyperbolic cosine of the argument `x`. 

   .. warning::

      In an upcoming release 'cosh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc cosh(z: complex(64)): complex(64)

   Returns the hyperbolic cosine of the argument `z`. 

   .. warning::

      In an upcoming release 'cosh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc cosh(z: complex(128)): complex(128)

   Returns the hyperbolic cosine of the argument `z`. 

   .. warning::

      In an upcoming release 'cosh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc divceil(param m: integral, param n: integral) param

   Returns :proc:`ceil`\(`m`/`n`),
   i.e., the fraction `m`/`n` rounded up to the nearest integer.
   
   If the arguments are of unsigned type, then
   fewer conditionals will be evaluated at run time.
   

.. function:: proc divceil(m: integral, n: integral)

   Returns :proc:`ceil`\(`m`/`n`),
   i.e., the fraction `m`/`n` rounded up to the nearest integer.
   
   If the arguments are of unsigned type, then
   fewer conditionals will be evaluated at run time.
   

.. function:: proc divceilpos(m: integral, n: integral)

   
   A variant of :proc:`divceil` that performs no runtime checks.
   The user must ensure that both arguments are strictly positive
   (not 0) and are of a signed integer type (not `uint`).
   

.. function:: proc divfloor(param m: integral, param n: integral) param

   Returns :proc:`floor`\(`m`/`n`),
   i.e., the fraction `m`/`n` rounded down to the nearest integer.
   
   If the arguments are of unsigned type, then
   fewer conditionals will be evaluated at run time.
   

.. function:: proc divfloor(m: integral, n: integral)

   Returns :proc:`floor`\(`m`/`n`),
   i.e., the fraction `m`/`n` rounded down to the nearest integer.
   
   If the arguments are of unsigned type, then
   fewer conditionals will be evaluated at run time.
   

.. function:: proc divfloorpos(m: integral, n: integral)

   
   A variant of :proc:`divfloor` that performs no runtime checks.
   The user must ensure that both arguments are strictly positive
   (not 0) and are of a signed integer type (not `uint`).
   

.. function:: proc erf(x: real(64)): real(64)

   .. warning::

      In an upcoming release 'erf' will no longer be included by default, please 'use' or 'import' the 'Math' module to call it

.. function:: proc erf(x: real(32)): real(32)

   .. warning::

      In an upcoming release 'erf' will no longer be included by default, please 'use' or 'import' the 'Math' module to call it

.. function:: proc erfc(x: real(64)): real(64)

   .. warning::

      In an upcoming release 'erfc' will no longer be included by default, please 'use' or 'import' the 'Math' module to call it

.. function:: proc erfc(x: real(32)): real(32)

   .. warning::

      In an upcoming release 'erfc' will no longer be included by default, please 'use' or 'import' the 'Math' module to call it

.. function:: proc exp(x: real(64)): real(64)

   Returns the value of the Napierian `e` raised to the power of the
   argument `x`. 

   .. warning::

      In an upcoming release 'exp' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc exp(x: real(32)): real(32)

   Returns the value of the Napierian `e` raised to the power of the
   argument. 

   .. warning::

      In an upcoming release 'exp' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc exp(z: complex(64)): complex(64)

   Returns the value of the Napierian `e` raised to the power of the
   argument. 

   .. warning::

      In an upcoming release 'exp' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc exp(z: complex(128)): complex(128)

   Returns the value of the Napierian `e` raised to the power of the
   argument. 

   .. warning::

      In an upcoming release 'exp' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc exp2(x: real(64)): real(64)

   Returns the value of `2` raised to the power of the argument `x`. 

   .. warning::

      In an upcoming release 'exp2' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc exp2(x: real(32)): real(32)

   Returns the value of `2` raised to the power of the argument `x`. 

   .. warning::

      In an upcoming release 'exp2' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc expm1(x: real(64)): real(64)

   Returns one less than the value of the Napierian `e` raised to the power
   of the argument `x`. 

   .. warning::

      In an upcoming release 'expm1' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc expm1(x: real(32)): real(32)

   Returns one less than the value of the Napierian `e` raised to the power
   of the argument `x`. 

   .. warning::

      In an upcoming release 'expm1' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc floor(x: real(64)): real(64)

   Returns the value of the argument `x` rounded down to the nearest integer. 

.. function:: proc floor(x: real(32)): real(32)

   Returns the value of the argument `x` rounded down to the nearest integer. 

.. function:: proc INFINITY param: real(64)

   Returns a value for which :proc:`isinf` will return `true`. 

.. function:: proc isfinite(x: real(64)): bool

   Returns `true` if the argument `x` is a representation of a finite value;
   `false` otherwise. 

.. function:: proc isfinite(x: real(32)): bool

   Returns `true` if the argument `x` is a representation of a finite value;
   `false` otherwise. 

.. function:: proc isinf(x: real(64)): bool

   Returns `true` if the argument `x` is a representation of *infinity*;
   `false` otherwise. 

.. function:: proc isinf(x: real(32)): bool

   Returns `true` if the argument `x` is a representation of *infinity*;
   `false` otherwise. 

.. function:: proc isnan(x: real(64)): bool

   Returns `true` if the argument `x` does not represent a valid number;
   `false` otherwise. 

.. function:: proc isnan(x: real(32)): bool

   Returns `true` if the argument `x` does not represent a valid number;
   `false` otherwise. 

.. function:: proc ldexp(x: real(64), n: int(32)): real(64)

   .. warning::

      In an upcoming release 'ldexp' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc ldexp(x: real(32), n: int(32)): real(32)

   .. warning::

      In an upcoming release 'ldexp' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc lgamma(x: real(64)): real(64)

   .. warning::

      In an upcoming release 'lgamma' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc lgamma(x: real(32)): real(32)

   .. warning::

      In an upcoming release 'lgamma' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc log(x: real(64)): real(64)

   Returns the natural logarithm of the argument `x`.
   
   It is an error if `x` is less than or equal to zero.
   

   .. warning::

      In an upcoming release 'log' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc log(x: real(32)): real(32)

   Returns the natural logarithm of the argument `x`.
   
   It is an error if `x` is less than or equal to zero.
   

   .. warning::

      In an upcoming release 'log' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc log(z: complex(64)): complex(64)

   Returns the natural logarithm of the argument `z`. 

   .. warning::

      In an upcoming release 'log' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc log(z: complex(128)): complex(128)

   Returns the natural logarithm of the argument `z`. 

   .. warning::

      In an upcoming release 'log' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc log10(x: real(64)): real(64)

   Returns the base 10 logarithm of the argument `x`.
   
   It is an error if `x` is less than or equal to zero.
   

   .. warning::

      In an upcoming release 'log10' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc log10(x: real(32)): real(32)

   Returns the base 10 logarithm of the argument `x`.
   
   It is an error if `x` is less than or equal to zero.
   

   .. warning::

      In an upcoming release 'log10' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc log2(x: real(64)): real(64)

   Returns the base 2 logarithm of the argument `x`.
   
   It is an error if `x` is less than or equal to zero.
   

   .. warning::

      In an upcoming release 'log2' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc log2(x: real(32)): real(32)

   Returns the base 2 logarithm of the argument `x`.
   
   It is an error if `x` is less than or equal to zero.
   

   .. warning::

      In an upcoming release 'log2' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc log2(val: int(?w))

   Returns the base 2 logarithm of the argument `x`,
   rounded down.
   
   :rtype: `int`
   
   It is an error if `x` is less than or equal to zero.
   

   .. warning::

      In an upcoming release 'log2' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc log2(val: uint(?w))

   Returns the base 2 logarithm of the argument `x`,
   rounded down.
   
   :rtype: `int`
   
   It is an error if `x` is less than or equal to zero.
   

   .. warning::

      In an upcoming release 'log2' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc max(x, y)

   Returns the maximum value of two arguments using the ``>`` operator
   for comparison.
   If one of the arguments is :proc:`AutoMath.NAN`, the result is also NAN.
   
   :rtype: The type of `x`.
   

.. function:: proc max(x, y, z ...?k)

   Returns the maximum value of 3 or more arguments using the above call.
      

.. function:: proc max(param x: numeric, param y: numeric) param

   Returns the maximum of 2 param ``int``, ``uint``, ``real``, or ``imag``
   values as a param.
   

.. function:: proc min(x, y)

   Returns the minimum value of two arguments using the ``<`` operator
   for comparison.
   
   If one of the arguments is :proc:`AutoMath.NAN`, the result is also NAN.
   
   :rtype: The type of `x`.
   

.. function:: proc min(x, y, z ...?k)

   Returns the minimum value of 3 or more arguments using the above call.
      

.. function:: proc min(param x: numeric, param y: numeric) param

   Returns the minimum of 2 param ``int``, ``uint``, ``real``, or ``imag``
   values as a param.
   

.. function:: proc mod(param m: integral, param n: integral) param

   Computes the mod operator on the two arguments, defined as
   ``mod(m,n) = m - n * floor(m / n)``.
   
   The result is always >= 0 if `n` > 0.
   It is an error if `n` == 0.
   

.. function:: proc mod(m: integral, n: integral)

   Computes the mod operator on the two arguments, defined as
   ``mod(m,n) = m - n * floor(m / n)``.
   
   If the arguments are of unsigned type, then
   fewer conditionals will be evaluated at run time.
   
   The result is always >= 0 if `n` > 0.
   It is an error if `n` == 0.
   

.. function:: proc mod(x: real(32), y: real(32)): real(32)

   Computes the mod operator on the two numbers, defined as
   ``mod(x,y) = x - y * floor(x / y)``.
   

.. function:: proc mod(x: real(64), y: real(64)): real(64)

   Computes the mod operator on the two numbers, defined as
   ``mod(x,y) = x - y * floor(x / y)``.
   

.. function:: proc NAN param: real(64)

   Returns a value for which :proc:`isnan` will return `true`. 

.. function:: proc nearbyint(x: real(64)): real(64)

   Returns the rounded integral value of the argument `x` determined by the
   current rounding direction.  :proc:`nearbyint` will not raise the "inexact"
   floating-point exception.
   

.. function:: proc nearbyint(x: real(32)): real(32)

   Returns the rounded integral value of the argument `x` determined by the
   current rounding direction.  :proc:`nearbyint` will not raise the "inexact"
   floating-point exception.
   

.. function:: proc rint(x: real(64)): real(64)

   Returns the rounded integral value of the argument `x` determined by the
   current rounding direction.  :proc:`rint` may raise the "inexact" floating-point
   exception.
   

.. function:: proc rint(x: real(32)): real(32)

   Returns the rounded integral value of the argument `x` determined by the
   current rounding direction.  :proc:`rint` may raise the "inexact" floating-point
   exception.
   

.. function:: proc round(x: real(64)): real(64)

   Returns the nearest integral value of the argument `x`, returning that
   value which is larger than `x` in absolute value for the half-way case. 

.. function:: proc round(x: real(32)): real(32)

   Returns the nearest integral value of the argument `x`, returning that
   value which is larger than `x` in absolute value for the half-way case. 

.. function:: proc sgn(i: int(?w)): int(8)

   Returns the signum function of the integer argument `i`:
   1 if positive, -1 if negative, 0 if zero.
   

.. function:: proc sgn(i: uint(?w)): uint(8)

   Returns the signum function of the unsigned integer argument `i`:
   1 if positive, -1 if negative, 0 if zero.
   

.. function:: proc sgn(param i: integral) param

   Returns the signum function of the integer param argument `i`:
   1 if positive, -1 if negative, 0 if zero.
   

.. function:: proc sgn(x: real(?w)): int(8)

   Returns the signum function of the real argument `x`:
   1 if positive, -1 if negative, 0 if zero.
   

.. function:: proc sin(x: real(64)): real(64)

   Returns the sine of the argument `x`. 

   .. warning::

      In an upcoming release 'sin' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc sin(x: real(32)): real(32)

   Returns the sine of the argument `x`. 

   .. warning::

      In an upcoming release 'sin' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc sin(z: complex(64)): complex(64)

   Returns the sine of the argument `z`. 

   .. warning::

      In an upcoming release 'sin' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc sin(z: complex(128)): complex(128)

   Returns the sine of the argument `z`. 

   .. warning::

      In an upcoming release 'sin' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc sinh(x: real(64)): real(64)

   Returns the hyperbolic sine of the argument `x`. 

   .. warning::

      In an upcoming release 'sinh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc sinh(x: real(32)): real(32)

   Returns the hyperbolic sine of the argument `x`. 

   .. warning::

      In an upcoming release 'sinh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc sinh(z: complex(64)): complex(64)

   Returns the hyperbolic sine of the argument `z`. 

   .. warning::

      In an upcoming release 'sinh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc sinh(z: complex(128)): complex(128)

   Returns the hyperbolic sine of the argument `z`. 

   .. warning::

      In an upcoming release 'sinh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc sqrt(x: real(64)): real(64)

   Returns the square root of the argument `x`.
   
   It is an error if the `x` is less than zero.
   

.. function:: proc sqrt(x: real(32)): real(32)

   Returns the square root of the argument `x`.
   
   It is an error if  `x` is less than zero.
   

.. function:: proc sqrt(z: complex(64)): complex(64)

   Returns the square root of the argument `z`. 

.. function:: proc sqrt(z: complex(128)): complex(128)

   Returns the square root of the argument `z`. 

.. function:: proc tan(x: real(64)): real(64)

   Returns the tangent of the argument `x`. 

   .. warning::

      In an upcoming release 'tan' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc tan(x: real(32)): real(32)

   Returns the tangent of the argument `x`. 

   .. warning::

      In an upcoming release 'tan' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc tan(z: complex(64)): complex(64)

   Returns the tangent of the argument `z`. 

   .. warning::

      In an upcoming release 'tan' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc tan(z: complex(128)): complex(128)

   Returns the tangent of the argument `z`. 

   .. warning::

      In an upcoming release 'tan' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc tanh(x: real(64)): real(64)

   Returns the hyperbolic tangent of the argument `x`. 

   .. warning::

      In an upcoming release 'tanh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc tanh(x: real(32)): real(32)

   Returns the hyperbolic tangent of the argument `x`. 

   .. warning::

      In an upcoming release 'tanh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc tanh(z: complex(64)): complex(64)

   Returns the hyperbolic tangent of the argument `z`. 

   .. warning::

      In an upcoming release 'tanh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc tanh(z: complex(128)): complex(128)

   Returns the hyperbolic tangent of the argument `z`. 

   .. warning::

      In an upcoming release 'tanh' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc tgamma(x: real(64)): real(64)

   .. warning::

      In an upcoming release 'tgamma' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc tgamma(x: real(32)): real(32)

   .. warning::

      In an upcoming release 'tgamma' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc trunc(x: real(64)): real(64)

   Returns the nearest integral value to the argument `x` that is not larger
   than `x` in absolute value. 

.. function:: proc trunc(x: real(32)): real(32)

   Returns the nearest integral value to the argument `x` that is not larger
   than `x` in absolute value. 

.. function:: proc gcd(in a: int, in b: int): int

   Returns the greatest common divisor of the integer argument `a` and
   `b`. 

   .. warning::

      In an upcoming release 'gcd' will no longer be included by default, please 'use' or 'import' the :mod:`Math` module to call it

.. function:: proc isclose(x, y, rtol = 1e-5, atol = 0.0): bool

   Returns true if `x` and `y` are approximately equal, else returns false. 

.. function:: proc signbit(x: real(32)): bool

   Returns true if the sign of `x` is negative, else returns false. It detects
   the sign bit of zeroes, infinities, and NANs 

.. function:: proc signbit(x: real(64)): bool

   Returns true if the sign of `x` is negative, else returns false. It detects
   the sign bit of zeroes, infinities, and NANs 

